[gd_scene load_steps=24 format=2]

[ext_resource path="res://addons/voxel_factory/VoxelEditor/voxel_editor.gd" type="Script" id=1]
[ext_resource path="res://addons/voxel_factory/VoxelEditor/icons/new_file.png" type="Texture" id=2]
[ext_resource path="res://addons/voxel_factory/VoxelEditor/icons/open.png" type="Texture" id=3]
[ext_resource path="res://addons/voxel_factory/VoxelEditor/icons/save.png" type="Texture" id=4]
[ext_resource path="res://addons/voxel_factory/VoxelEditor/icons/saveas.png" type="Texture" id=5]
[ext_resource path="res://addons/voxel_factory/VoxelEditor/tool_group.tres" type="ButtonGroup" id=6]
[ext_resource path="res://addons/voxel_factory/VoxelEditor/icons/pen.png" type="Texture" id=7]
[ext_resource path="res://addons/voxel_factory/VoxelEditor/icons/pen_toggle.png" type="Texture" id=8]
[ext_resource path="res://addons/voxel_factory/VoxelEditor/icons/eraser.png" type="Texture" id=9]
[ext_resource path="res://addons/voxel_factory/VoxelEditor/icons/eraser_toggle.png" type="Texture" id=10]
[ext_resource path="res://addons/voxel_factory/VoxelEditor/icons/hand.png" type="Texture" id=11]
[ext_resource path="res://addons/voxel_factory/VoxelEditor/icons/hand_toggle.png" type="Texture" id=12]
[ext_resource path="res://addons/voxel_factory/VoxelEditor/icons/color_normal.png" type="Texture" id=13]
[ext_resource path="res://addons/voxel_factory/VoxelEditor/icons/color_toggle.png" type="Texture" id=14]
[ext_resource path="res://addons/voxel_factory/VoxelEditor/icons/anchor.png" type="Texture" id=15]
[ext_resource path="res://addons/voxel_factory/VoxelEditor/icons/anchor_toggle.png" type="Texture" id=16]
[ext_resource path="res://addons/voxel_factory/VoxelEditor/icons/1.png" type="Texture" id=17]
[ext_resource path="res://addons/voxel_factory/VoxelEditor/icons/1_toggle.png" type="Texture" id=18]
[ext_resource path="res://addons/voxel_factory/VoxelEditor/icons/2.png" type="Texture" id=19]
[ext_resource path="res://addons/voxel_factory/VoxelEditor/icons/2_toggle.png" type="Texture" id=20]
[ext_resource path="res://addons/voxel_factory/VoxelEditor/editor_view.tscn" type="PackedScene" id=21]
[ext_resource path="res://addons/voxel_factory/VoxelEditor/icons/zoom.png" type="Texture" id=22]

[sub_resource type="World" id=1]

[node name="Voxel Editor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 200 )
mouse_filter = 2
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 25 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
margin_right = 1024.0
margin_bottom = 25.0

[node name="new" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_right = 30.0
margin_bottom = 25.0
hint_tooltip = "Create a new mesh"
text = "New mesh"
icon = ExtResource( 2 )
flat = true
clip_text = true
align = 0

[node name="Button" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 34.0
margin_right = 64.0
margin_bottom = 25.0
hint_tooltip = "Open a new mesh(.tres)"
focus_mode = 0
text = "Open"
icon = ExtResource( 3 )
flat = true
clip_text = true
align = 0

[node name="Button2" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 68.0
margin_right = 98.0
margin_bottom = 25.0
hint_tooltip = "Save the current mesh"
focus_mode = 0
text = "Save"
icon = ExtResource( 4 )
flat = true
clip_text = true
align = 0

[node name="Button3" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 102.0
margin_right = 132.0
margin_bottom = 25.0
hint_tooltip = "Save the current mesh as"
focus_mode = 0
text = "Save as"
icon = ExtResource( 5 )
flat = true
clip_text = true
align = 0

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 136.0
margin_right = 140.0
margin_bottom = 25.0

[node name="PenTool" type="TextureButton" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 144.0
margin_right = 169.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
hint_tooltip = "Pen tool"
focus_mode = 0
toggle_mode = true
pressed = true
group = ExtResource( 6 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
expand = true
stretch_mode = 3

[node name="EraseTool" type="TextureButton" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 173.0
margin_right = 198.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
hint_tooltip = "Eraser tool"
focus_mode = 0
toggle_mode = true
group = ExtResource( 6 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
expand = true
stretch_mode = 3

[node name="MoveTool" type="TextureButton" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 202.0
margin_right = 227.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
hint_tooltip = "Move tool"
focus_mode = 0
toggle_mode = true
group = ExtResource( 6 )
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )
expand = true
stretch_mode = 3

[node name="ColorPickerTool" type="TextureButton" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 231.0
margin_right = 256.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
hint_tooltip = "Color picker
"
toggle_mode = true
shortcut_in_tooltip = false
group = ExtResource( 6 )
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 14 )
expand = true
stretch_mode = 3

[node name="anchorTool" type="TextureButton" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 260.0
margin_right = 285.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
hint_tooltip = "Color picker
"
toggle_mode = true
shortcut_in_tooltip = false
group = ExtResource( 6 )
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 16 )
expand = true
stretch_mode = 3

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 289.0
margin_right = 293.0
margin_bottom = 25.0

[node name="Name" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 297.0
margin_top = 5.0
margin_right = 335.0
margin_bottom = 19.0
text = "Name"

[node name="NameEdit" type="LineEdit" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 339.0
margin_right = 892.0
margin_bottom = 25.0
rect_min_size = Vector2( 50, 0 )
hint_tooltip = "The current opened mesh"
focus_mode = 0
size_flags_horizontal = 3
text = "unsaved mesh"
editable = false
focus_mode = 0
context_menu_enabled = false
caret_blink = true

[node name="VSeparator3" type="VSeparator" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 896.0
margin_right = 900.0
margin_bottom = 25.0

[node name="Name2" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer"]
visible = false
margin_left = 835.0
margin_top = 5.0
margin_right = 900.0
margin_bottom = 19.0
text = "Voxel size"

[node name="VoxelSize" type="LineEdit" parent="VBoxContainer/MarginContainer/HBoxContainer"]
visible = false
margin_left = 842.0
margin_right = 900.0
margin_bottom = 25.0
rect_min_size = Vector2( 50, 0 )
text = "1"
align = 1
context_menu_enabled = false

[node name="HSlider" type="HSlider" parent="VBoxContainer/MarginContainer/HBoxContainer"]
visible = false
margin_left = 895.0
margin_right = 995.0
margin_bottom = 25.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 3
min_value = 1.0
max_value = 6.0
value = 6.0
ticks_on_borders = true

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 904.0
margin_top = 5.0
margin_right = 991.0
margin_bottom = 19.0
text = "Current color:"

[node name="ColorPickerButton" type="ColorPickerButton" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 995.0
margin_right = 1024.0
margin_bottom = 25.0
rect_min_size = Vector2( 29, 25 )
shortcut_in_tooltip = false
flat = true
color = Color( 1, 0.447059, 0.447059, 1 )
edit_alpha = false

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
margin_top = 29.0
margin_right = 1024.0
margin_bottom = 576.0
focus_mode = 2
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ViewportContainer" type="ViewportContainer" parent="VBoxContainer/MarginContainer2"]
margin_right = 1024.0
margin_bottom = 547.0
focus_mode = 1
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer2/ViewportContainer"]
margin_right = 25.0
margin_bottom = 50.0

[node name="1" type="TextureButton" parent="VBoxContainer/MarginContainer2/ViewportContainer/VBoxContainer"]
margin_right = 25.0
margin_bottom = 23.0
hint_tooltip = "Toggle shading"
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 18 )
expand = true
stretch_mode = 3

[node name="2" type="TextureButton" parent="VBoxContainer/MarginContainer2/ViewportContainer/VBoxContainer"]
margin_top = 27.0
margin_right = 25.0
margin_bottom = 50.0
hint_tooltip = "Toggle SSAO"
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 20 )
expand = true
stretch_mode = 3

[node name="Viewport" type="Viewport" parent="VBoxContainer/MarginContainer2/ViewportContainer"]
size = Vector2( 1024, 547 )
own_world = true
world = SubResource( 1 )
handle_input_locally = false
render_target_update_mode = 3
gui_snap_controls_to_pixels = false

[node name="Spatial" parent="VBoxContainer/MarginContainer2/ViewportContainer/Viewport" instance=ExtResource( 21 )]

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer"]
margin_top = 580.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer3"]
margin_right = 1024.0
margin_bottom = 20.0
alignment = 2

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer3/HBoxContainer"]
margin_top = 3.0
margin_right = 114.0
margin_bottom = 17.0
text = "Background color:"

[node name="ColorPickerButton" type="ColorPickerButton" parent="VBoxContainer/MarginContainer3/HBoxContainer"]
margin_left = 118.0
margin_right = 146.0
margin_bottom = 20.0
rect_min_size = Vector2( 28, 20 )
flat = true

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/MarginContainer3/HBoxContainer"]
margin_left = 150.0
margin_right = 154.0
margin_bottom = 20.0

[node name="Spacer" type="Control" parent="VBoxContainer/MarginContainer3/HBoxContainer"]
margin_left = 158.0
margin_right = 685.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VSeparator3" type="VSeparator" parent="VBoxContainer/MarginContainer3/HBoxContainer"]
margin_left = 689.0
margin_right = 693.0
margin_bottom = 20.0

[node name="VoxPosition" type="Label" parent="VBoxContainer/MarginContainer3/HBoxContainer"]
margin_left = 697.0
margin_top = 3.0
margin_right = 838.0
margin_bottom = 17.0
text = "Current voxel: (0, 0, 0)"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/MarginContainer3/HBoxContainer"]
margin_left = 842.0
margin_right = 846.0
margin_bottom = 20.0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/MarginContainer3/HBoxContainer"]
margin_left = 850.0
margin_right = 870.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
texture = ExtResource( 22 )
expand = true
stretch_mode = 4

[node name="ZoomSlider" type="HSlider" parent="VBoxContainer/MarginContainer3/HBoxContainer"]
margin_left = 874.0
margin_right = 1024.0
margin_bottom = 20.0
rect_min_size = Vector2( 150, 0 )
size_flags_vertical = 3
min_value = 2.0
max_value = 120.0
step = -1.0
value = 20.0
ticks_on_borders = true

[node name="OpenDialog" type="FileDialog" parent="."]
margin_right = 524.0
margin_bottom = 256.0
window_title = "Open a File"
mode = 0
filters = PoolStringArray( "*.tres" )

[node name="SaveDialog" type="FileDialog" parent="."]
margin_right = 526.0
margin_bottom = 258.0
filters = PoolStringArray( "*.tres" )

[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/new" to="." method="_on_new_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/Button" to="." method="_on_Open_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/Button2" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/Button3" to="." method="_on_SaveAs_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/PenTool" to="." method="_on_PenTool_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/EraseTool" to="." method="_on_EraseTool_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/MoveTool" to="." method="_on_MoveTool_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/ColorPickerTool" to="." method="_on_ColorPickerTool_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/anchorTool" to="." method="_on_anchorTool_pressed"]
[connection signal="value_changed" from="VBoxContainer/MarginContainer/HBoxContainer/HSlider" to="." method="_on_voxSizeSlider_value_changed"]
[connection signal="color_changed" from="VBoxContainer/MarginContainer/HBoxContainer/ColorPickerButton" to="." method="_on_ColorPickerButton_color_changed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/ColorPickerButton" to="." method="_on_ColorPickerButton_pressed"]
[connection signal="toggled" from="VBoxContainer/MarginContainer2/ViewportContainer/VBoxContainer/1" to="." method="_on_1_toggled"]
[connection signal="toggled" from="VBoxContainer/MarginContainer2/ViewportContainer/VBoxContainer/2" to="." method="_on_2_toggled"]
[connection signal="color_changed" from="VBoxContainer/MarginContainer3/HBoxContainer/ColorPickerButton" to="." method="_on_sky_color_changed"]
[connection signal="value_changed" from="VBoxContainer/MarginContainer3/HBoxContainer/ZoomSlider" to="." method="_on_ZoomSlider_value_changed"]
[connection signal="file_selected" from="OpenDialog" to="." method="_on_OpenDialog_file_selected"]
[connection signal="file_selected" from="SaveDialog" to="." method="_on_SaveDialog_file_selected"]
